2019-01-05  Gavin Smith  <gavinsmith0123@gmail.com>

	Improve XS loading error message.

	* tp/Texinfo/XSLoader.pm: Improve error message in the case that 
	a module couldn't be loaded.

2019-01-05  Bruno Haible  <bruno@clisp.org>

	Fix build errors on AIX 7.1.

	* info/Makefile.am (LDADD),
	* install-info/Makefile.am (LDADD): Add $(LIBTHREAD).

2019-01-05  Gavin Smith  <gavinsmith0123@gmail.com>

	Check for Data::Dumper.

	* configure.ac: Check for Data::Dumper as well as Encode.  Bruno 
	Haible reported that Data::Dumper was missing on CentOS 7.3.

2019-01-05  Gavin Smith  <gavinsmith0123@gmail.com>

	Combine Makefiles for XS modules.

	* tp/Texinfo/XS/configure.ac (AC_CONFIG_FILES): Remove Makefile 
	in parsetexi subdirectory.
	* tp/Texinfo/XS/Makefile.am: Merge in contents of 
	tp/Texinfo/XS/parsetexi/Makefile.am.
	* tp/Texinfo/XS/parsetexi/Makefile.am: Remove file.

	This means that passing -lperl when linking will always be 
	conditional on HOST_NEEDS_NO_UNDEFINED.

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	pretest 6.5.90.

	* configure.ac: version

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/parsetexi: Include config.h in all files.

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	Update texinfo-tex-test.texi.

	* doc/texinfo-tex-test.texi (Final page of index hard to balance):
	Update the description of what the output should look like.  
	(Changed on 2017-11-16).

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/Makefile.am (EXTRA_DIST): List texinfo-tex-test.WIDOWs.

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	Update copyright years.

	* info/info.c (main),
	* texindex/ti.twjr: 2019.

2019-01-04  Gavin Smith  <gavinsmith0123@gmail.com>

	Prepare for pretest release.

	* util/srclist-txi: Remove EMACSSRC.
	Add a per-user override.
	* util/srclist.txt: Remove info.texi, as this is not distributed 
	with Texinfo any more.  Update to three-column format used now 